--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Deploy to GitHub Pages
 
 on:
@@ -22,7 +20,10 @@ jobs:
           node-version: 17
           cache: npm
 
-      - run: npm run build
+      - name: Build
+        run: |
+          npm install
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
